--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.url=jdbc:h2:file:/Users/smileit/it/data2
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
-spring.datasource.password=my-secret-pw
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 
@@ -24,4 +24,6 @@ spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 spring.sql.init.mode=always
 
+
+# comando usado: set DB_PASSWORD=tu_contraseña
 
